# clarifindata-python

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: quickstart.py
src/clarifindata/: __init__.py  client.py  datasets.py  errors.py
