[project]
name = "clarifindata"
version = "0.1.0"
description = "Python client for the clarifindata Taiwan-stock market-data API."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [{ name = "clarifindata" }]
keywords = ["taiwan", "stock", "finance", "market-data", "twse", "tpex", "api"]
dependencies = [
    "httpx>=0.27",
]

[project.urls]
Homepage = "https://clarifindata.com"
Documentation = "https://clarifindata.com/docs"
Source = "https://github.com/AChao0212/clarifindata-python"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/clarifindata"]

[tool.ruff]
line-length = 100
target-version = "py39"
