[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "clarifindata"
version = "0.2.0"
description = "Python client for the 金晰數據 / clarifindata Taiwan-stock data API"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "clarifindata" }]
keywords = ["taiwan", "stock", "finance", "data", "quant", "twse", "tpex"]
dependencies = ["httpx>=0.24"]

[project.optional-dependencies]
pandas = ["pandas>=1.5"]
http2  = ["h2>=4.0"]
all    = ["pandas>=1.5", "h2>=4.0"]

[project.urls]
Homepage = "https://clarifindata.com"
Documentation = "https://clarifindata.com/docs"
Source = "https://github.com/AChao0212/clarifindata-python"

[tool.hatch.build.targets.wheel]
packages = ["src/clarifindata"]
