[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "clarifindata"
version = "0.2.3"
description = "Python client for the 金晰數據 / clarifindata Taiwan-stock data API"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "clarifindata" }]
keywords = ["taiwan", "stock", "finance", "data", "quant", "twse", "tpex"]
dependencies = ["httpx>=0.24"]

[project.optional-dependencies]
pandas = ["pandas>=1.5"]
http2  = ["h2>=4.0"]
all    = ["pandas>=1.5", "h2>=4.0"]
# Tooling for CI / local dev. `ruff check .` in ci.yml needs this installed;
# pandas is included so the import smoke-test exercises the optional as_df path.
dev    = ["ruff>=0.5", "pandas>=1.5"]

[project.urls]
Homepage = "https://clarifindata.com"
Documentation = "https://clarifindata.com/docs"
Source = "https://github.com/AChao0212/clarifindata-python"

[tool.hatch.build.targets.wheel]
packages = ["src/clarifindata"]
